openshift/Deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  generation: 1
  labels:
    app: was-demo
  name: was-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: was-demo
    deploymentconfig: was-demo
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: was-demo
        deploymentconfig: was-demo
    spec:
      containers:
        - image: was-demo
          imagePullPolicy: Always
          name: was-demo
          ports:
            - containerPort: 9080
              protocol: TCP
            - containerPort: 9043
              protocol: TCP
            - containerPort: 9080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - was-demo
        from:
          kind: ImageStreamTag
          name: was-demo:latest
      type: ImageChange
