openshift/Service-secure.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: was-demo-secure
spec:
  selector:
    app: was-demo
  ports:
    - protocol: TCP
      port: 9443
      targetPort: 9443
