openshift/Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: was-demo
spec:
  to:
    kind: Service
    name: was-demo
    weight: 100
  port:
    targetPort: 9080
  wildcardPolicy: None
